--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+#### MongoDB
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=youtube-clone
-
+#### Amazon Services
+cloud.aws.region.static=us-west-2
+cloud.aws.stack.auto=false
