--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.data.mongodb.database=youtube-clone
 #### Amazon Services
 cloud.aws.region.static=us-west-2
 cloud.aws.stack.auto=false
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
