--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.data.mongodb.database=youtube-clone
 #### Amazon Services
 cloud.aws.region.static=us-west-2
 cloud.aws.stack.auto=false
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
+#### multipart
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
