added authO to client

--- a/frontend/youtube-clone-ui/package.json
+++ b/frontend/youtube-clone-ui/package.json
@@ -17,11 +17,12 @@
     "@angular/core": "^14.0.0",
     "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.0.0",
-    "@angular/material": "^14.2.0",
+    "@angular/material": "^14.2.1",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@videogular/ngx-videogular": "^6.0.0",
+    "angular-auth-oidc-client": "14.1.4",
     "ngx-file-drop": "^14.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
