added authO to backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,6 @@ cloud.aws.stack.auto=false
 #### multipart
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
+#### Auth
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-p06nzbvu.us.auth0.com/
+auth0.audience=http://localhost:8080/
