--- a/frontend/youtube-clone-ui/.gitignore
+++ b/frontend/youtube-clone-ui/.gitignore
@@ -7,7 +7,6 @@
 /bazel-out
 
 # Node
-/node
 /node_modules
 npm-debug.log
 yarn-error.log
@@ -30,6 +29,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
+/.angular/
 /.angular/cache
 .sass-cache/
 /connect.lock
@@ -41,3 +41,4 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
