--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,5 +9,8 @@ cloud.aws.stack.auto=false
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
 #### Auth
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-p06nzbvu.us.auth0.com/
-auth0.audience=http://localhost:8080/
+dmilut.app.jwtCookieName=dmilut
+dmilut.app.jwtSecret=dmilutSecretKey
+dmilut.app.jwtExpirationMs=86400000
+#### Logging
+logging.level.org.springframework.security=DEBUG
